everything working correctly

--- a/app/src/main/res/layout/fragment_llistar_productes.xml
+++ b/app/src/main/res/layout/fragment_llistar_productes.xml
@@ -9,7 +9,7 @@
         tools:context=".fragments.LlistatMoblesFragment">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/moblesRecycler"
+            android:id="@+id/productsRecycler"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintBottom_toTopOf="@id/afegirButton"
@@ -24,7 +24,7 @@
             android:src="@drawable/baseline_add_24"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/moblesRecycler"
+            app:layout_constraintTop_toBottomOf="@id/productsRecycler"
             tools:visibility="visible"
             android:layout_margin="20dp"/>
 
