--- a/app/src/main/res/layout/llistat_products_card_view.xml
+++ b/app/src/main/res/layout/llistat_products_card_view.xml
@@ -7,13 +7,13 @@
     app:cardElevation="6dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/mobleLayout"
+        android:id="@+id/productLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="20dp">
 
         <TextView
-            android:id="@+id/nomMoble"
+            android:id="@+id/productName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -22,7 +22,7 @@
             android:text="@string/nom"/>
 
         <TextView
-            android:id="@+id/preuMoble"
+            android:id="@+id/productPrice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
