--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -13,6 +13,9 @@
         <action
             android:id="@+id/action_loginFragment_to_registerFragment"
             app:destination="@id/registerFragment" />
+        <action
+            android:id="@+id/action_loginFragment_to_llistarProductesFragment"
+            app:destination="@id/llistarProductesFragment" />
     </fragment>
     <fragment
         android:id="@+id/registerFragment"
@@ -23,4 +26,24 @@
             android:id="@+id/action_registerFragment_to_loginFragment"
             app:destination="@id/loginFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/llistarProductesFragment"
+        android:name="com.example.supabase.fragments.LlistarProductesFragment"
+        android:label="LlistarProductesFragment" >
+        <action
+            android:id="@+id/action_llistarProductesFragment_to_addProductFragment"
+            app:destination="@id/addProductFragment" />
+        <action
+            android:id="@+id/action_llistarProductesFragment_to_editProductFragment"
+            app:destination="@id/editProductFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/addProductFragment"
+        android:name="com.example.supabase.fragments.AddProductFragment"
+        android:label="AddProductFragment" />
+    <fragment
+        android:id="@+id/editProductFragment"
+        android:name="com.example.supabase.fragments.EditProductFragment"
+        android:label="fragment_edit_product"
+        tools:layout="@layout/fragment_edit_product" />
 </navigation>
